math-core/tests/snapshots/conversion_test__nabla_in_mathbf.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathbf{\\nabla} + \\nabla"
---
<math>
    <mi>𝛁</mi>
    <mo>+</mo>
    <mi mathvariant="normal">∇</mi>
</math>
