math-core/tests/snapshots/conversion_test__newline.snap
---
source: math-core/tests/conversion_test.rs
expression: "x\\\\y"
---
<math>
    <mi>x</mi>
    <mi>y</mi>
</math>
