math-core/tests/snapshots/conversion_test__not_less_than.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\not\\lt"
---
<math>
    <mo>≮</mo>
</math>
