math-core/tests/snapshots/conversion_test__not_less_than_symbol.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\not< x"
---
<math>
    <mo>≮</mo>
    <mi>x</mi>
</math>
