math-core/tests/snapshots/conversion_test__notag.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\begin{align} 1\\notag\\\\2\\end{align}"
---
<math>
    <mtable displaystyle="true" scriptlevel="0" style="width: 100%">
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mn>1</mn>
            </mtd>
            <mtd style="width: 50%"></mtd>
        </mtr>
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mn>2</mn>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;">
                <mtext>(1)</mtext>
            </mtd>
        </mtr>
    </mtable>
</math>
